[gd_scene load_steps=17 format=3 uid="uid://2gkctcsttsbf"]

[ext_resource type="Texture2D" uid="uid://c5l7qki7o7mxw" path="res://assets/art/ui/mainmenu/menu-background.png" id="1_a2a0b"]
[ext_resource type="Script" uid="uid://j7528xu3ch03" path="res://scenes/ui/screens/main_menu/main_menu_ui.gd" id="1_rng5r"]
[ext_resource type="Texture2D" uid="uid://bf08c1wclulgb" path="res://assets/art/ui/mainmenu/title.png" id="2_xsv71"]
[ext_resource type="Texture2D" uid="uid://bcc6h5frusxm6" path="res://assets/art/ui/mainmenu/menu-mask.png" id="3_owanv"]
[ext_resource type="Texture2D" uid="uid://bxnjhmd4bedli" path="res://assets/art/ui/mainmenu/layout-p2.png" id="4_lqmk6"]
[ext_resource type="Texture2D" uid="uid://cp2nqdmcsldp" path="res://assets/art/ui/mainmenu/layout-p1.png" id="5_q3qdm"]
[ext_resource type="Texture2D" uid="uid://sa6gdwrseelx" path="res://assets/art/ui/mainmenu/1-player-selected.png" id="6_sqfn8"]
[ext_resource type="Texture2D" uid="uid://c7nugltxau0uh" path="res://assets/art/ui/mainmenu/2-players.png" id="7_kry35"]
[ext_resource type="Texture2D" uid="uid://0dw1nilwnn70" path="res://assets/art/ui/mainmenu/ball-selection.png" id="8_rng5r"]
[ext_resource type="Texture2D" uid="uid://c2p6pvyru6jiw" path="res://assets/art/ui/mainmenu/start.png" id="9_kry35"]

[sub_resource type="Animation" id="Animation_mw8dd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/SingleplayerTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 102)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/TwoPlayerTexture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 129)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/Mask:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(235, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/PlayerOneControls:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(274, 78)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background/PlayerTwoControls:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(273, 128)]
}

[sub_resource type="Animation" id="Animation_0kx0b"]
resource_name = "Startup"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/Title:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(14, -100), Vector2(14, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/SingleplayerTexture:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-120, 102), Vector2(13, 102)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/TwoPlayerTexture:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-120, 129), Vector2(15, 129)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/Mask:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(400, 0), Vector2(235, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/PlayerOneControls:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(500, 78), Vector2(274, 78)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background/PlayerTwoControls:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(700, 128), Vector2(273, 128)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animation_complete"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2mt6"]
_data = {
&"RESET": SubResource("Animation_mw8dd"),
&"Startup": SubResource("Animation_0kx0b")
}

[sub_resource type="Animation" id="Animation_63k1c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/SelectionIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ktnm3"]
resource_name = "Rotate"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/SelectionIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0.0, 1.5708, 3.14159, 4.71239]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h0lt1"]
_data = {
&"RESET": SubResource("Animation_63k1c"),
&"Rotate": SubResource("Animation_ktnm3")
}

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rng5r")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_a2a0b")
stretch_mode = 6

[node name="Title" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 12.0
offset_right = 671.0
offset_bottom = 350.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_xsv71")
stretch_mode = 4

[node name="Mask" type="TextureRect" parent="Background"]
modulate = Color(0, 0, 0, 0.784314)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_bottom = 180.0
grow_horizontal = 0
texture = ExtResource("3_owanv")

[node name="PlayerOneControls" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -102.0
offset_right = -4.0
offset_bottom = -61.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_lqmk6")

[node name="PlayerTwoControls" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -52.0
offset_right = -5.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_q3qdm")

[node name="SingleplayerTexture" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -78.0
offset_right = 155.0
offset_bottom = -57.0
grow_vertical = 0
texture = ExtResource("6_sqfn8")
stretch_mode = 2

[node name="TwoPlayerTexture" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -51.0
offset_right = 157.0
offset_bottom = -30.0
grow_vertical = 0
texture = ExtResource("7_kry35")
stretch_mode = 2

[node name="SelectionIcon" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 146.0
offset_top = 102.0
offset_right = 166.0
offset_bottom = 122.0
pivot_offset = Vector2(10, 10)
texture = ExtResource("8_rng5r")
stretch_mode = 2

[node name="Start" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -385.0
offset_top = -137.0
offset_right = 383.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.08, 0.08)
pivot_offset = Vector2(385, 125)
texture = ExtResource("9_kry35")

[node name="ManuAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o2mt6")
}
autoplay = "Startup"

[node name="BallAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h0lt1")
}
autoplay = "Rotate"
